--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.1.7.1</version>
+            <type>jar</type>
+        </dependency>
+
     </dependencies>
 
     <build>
