--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,14 @@
             <type>jar</type>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>2.6.7</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
