--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
             <artifactId>ignite-zookeeper</artifactId>
             <version>${ignite.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
 
 
     </dependencies>
