--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=9999
 
 zookeeper.hosts=localhost:2181
 zookeeper.root=/testPath
+server.error.include-exception=true
+server.error.include-stacktrace=always
