Fixed issue with application start.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-server.port=9999
+#Random port
+server.port=0 
+
 
 
 zookeeper.hosts=localhost:2181
 zookeeper.root=/testPath
 server.error.include-exception=true
 server.error.include-stacktrace=always
+
